# jumashafara

./: .gitignore  404.html  README.md  _quarto.yml  about.qmd  deploy.sh  index.html  index.qmd  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  styles.css
.github/workflows/: ci.yml  deploy.yml  pages.yml
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
_site/: about.html  index.html  search.json
about/: index.html
blog/: index.html
courses/: index.html
courses/advanced-machine-learning/: index.html
courses/data-analysis-with-python/: index.html
courses/deep-learning-with-pytorch/: index.html
courses/machine-learning-with-python/: index.html
courses/programming-for-data-science/: index.html
courses/python-programming/: index.html
courses/web-development-fundamentals/: index.html
courses/web-development-python-javascript/: index.html
cv/: index.html
docs/: .authors.yml  about.html  about.md  cv.md  index.html  index.md  index.xml  listings.json  robots.txt  search.json  sitemap.xml  styles.css
docs/blog/: .authors.yml  index.md
docs/courses/: advanced-machine-learning.md  data-analysis-with-python.md  deep-learning-with-pytorch.md  index.md  machine-learning-with-python.md  programming-for-data-science.md  python-programming.md  web-development-fundamentals.md  web-development-python-javascript.md
docs/includes/: mkdocs.md
docs/javascripts/: footer.js
docs/projects/: data-science-portfolio.md  dataidea-logger.md  index.md  (+5 more)
projects/: index.html
search/: search_index.json
stylesheets/: extra.css
(+60 files in other folders)
